# informatica2flow

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
input_data/: WF_POL_WKD_FILE_COSTCENTER_LOW.xml
nifi-docker/: docker-compose.yml  nifi_start.sh  nifi_stop.sh
nifi-docker/data/database_repository/: 00000000000.xd  nifi-flow-audit.h2.db  nifi-flow-audit.lock.db  nifi-user-keys.h2.db  nifi-user-keys.lock.db  xd.lck
output_data/: M_POL_WKD_FILE_COSTCENTER_nifi_flow.json  M_POL_WKD_FILE_COSTCENTER_nifi_template.xml
pg_docker/: dbschema.sh  dbschema.sql  docker-compose.yml  pgvector_start.sh
pg_docker/data/: postmaster.pid
pg_docker/data/base/1/: 1255  1259  2618  2619  2619_vm  2658  2659  2662  2663  2673  2678  2679  2691  2696  2836  2840  2841  pg_internal.init
pg_docker/data/base/4/: 13407  2619  2674  2690  3455
pg_docker/data/base/5/: 1247  1247_vm  1249  1249_vm  1255  1255_vm  1259  1259_vm  16716  16725  16726  16728  16734  16735  16737  16744  16745  2224  2579  2600  2600_vm  2601  2601_vm  2602  2602_vm  (+66 more)
pg_docker/data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
pg_docker/data/pg_xact/: 0000
review_queue/: M_POL_WKD_FILE_COSTCENTER_review.json
src/: apply_review.py  confidence_engine.py  config.py  datatype_mapper.py  expression_translator.py  informatica_parser.py  langgraph_pipeline.py  mcp_server.py  migration_state.py  nifi_direct_deployer.py  nifi_flow_generator.py  nifi_intermediate_converter.py  nifi_rest_deployer.py  rule_memory_engine.py  spark_detector.py  validation_engine.py
